--- a/project/myshop/cart/templates/cart/detail.html
+++ b/project/myshop/cart/templates/cart/detail.html
@@ -1,46 +1,53 @@
 {% extends "shop/base.html" %}
 {% block title %}
-  Ваша корзина товаров
+    Ваша корзина товаров
 {% endblock %}
 {% block content %}
-  <h1>Ваша корзина товаров</h1>
-  <table class="cart">
-    <thead>
-      <tr>
-        <th>Изображение</th>
-        <th>Продукт</th>
-        <th>Количество</th>
-        <th>Удалить</th>
-        <th>Полная цена</th>
-        <th>Цена</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for item in cart %}
-        {% with product=item.product %}
-          <tr>
-            <td>
-              <a href="{{ product.get_absolute_url }}">
-                <img src="{{ product.image.url }}" alt="" />
-              </a>
-            </td>
-            <td>{{ product.name }}</td>
-            <td>{{ item.quantity }}</td>
-            <td><a href="{% url "cart:cart_remove" product.id %}">Удалить</a></td>
-            <td class="num">{{ item.price }} руб.</td>
-            <td class="num">{{ item.total_price }} руб.</td>
-          </tr>
-        {% endwith %}
-      {% endfor %}
-        <tr class="total">
-          <td>Total</td>
-          <td colspan="4"></td>
-          <td class="num">{{ cart.get_total_price }} руб.</td>
-        </tr>
-    </tbody>
-  </table>
-  <p class="text-right">
-    <a href="{% url "shop:product_list"%}" class="btn">Продолжить Шопинг</a>
-    <a href="#">Оформить заказ</a>
-  </p>
+      <h1>Ваша корзина товаров</h1>
+    <table class="cart">
+        <thead>
+            <tr>
+                <th>Изображение</th>
+                <th>Продукт</th>
+                <th>Количество</th>
+                <th>Удалить</th>
+                <th>Цена</th>
+                <th>Полная цена</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in cart %}
+                {% with product=item.product %}
+                    <tr>
+                        <td>
+                            <a href="{{ product.get_absolute_url }}">
+                                <img src="{{ product.image.url }}" alt="" />
+                            </a>
+                        </td>
+                        <td>{{ product.name }}</td>
+                        <td>
+                            <form action="{% url "cart:cart_add" product.id %}" method="post" class="add">
+                                {{ item.update_quantity_form.quantity }}
+                                {{ item.update_quantity_form.update }}
+                                {% csrf_token %}
+                                <input type="submit" value="Обновить">
+                            </form>
+                        </td>
+                        <td><a href="{% url "cart:cart_remove" product.id %}">Удалить</a></td>
+                        <td class="num">{{ item.price }} руб.</td>
+                        <td class="num">{{ item.total_price }} руб.</td>
+                    </tr>
+                {% endwith %}
+            {% endfor %}
+                <tr class="total">
+                    <td>Total</td>
+                    <td colspan="4"></td>
+                    <td class="num">{{ cart.get_total_price }} руб.</td>
+                </tr>
+        </tbody>
+    </table>
+    <p class="text-right">
+        <a href="{% url "shop:product_list"%}" class="btn">Продолжить Шопинг</a>
+        <a href="#">Оформить заказ</a>
+    </p>
 {% endblock %}
