--- a/project/myshop/cart/templates/cart/detail.html
+++ b/project/myshop/cart/templates/cart/detail.html
@@ -48,6 +48,6 @@
     </table>
     <p class="text-right">
         <a href="{% url "shop:product_list"%}" class="btn">Продолжить Шопинг</a>
-        <a href="#">Оформить заказ</a>
+        <a href="{% url "orders:order_create" %}" class="btn">Оформить заказ</a>
     </p>
 {% endblock %}
