Добавлена ссылка на главную страницу

--- a/project/myshop/shop/templates/shop/base.html
+++ b/project/myshop/shop/templates/shop/base.html
@@ -12,7 +12,7 @@
 <body>
     <section id="header">
         <div class="top container">
-            Зоомагазин
+            <a href="{% url "shop:product_list"%}">Зоомагазин</a>
         </div>
         <div class="top-bl">
             <div class="container">
